# checkmatelib

./: .cookiecutter.json  .coveragerc  .isort.cfg  .python-version  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.cookiecutter/: cookiecutter.json
.cookiecutter/includes/pyproject.toml/: dependencies
src/checkmatelib/: __init__.py  _cache.py  _response.py  client.py  exceptions.py
src/checkmatelib/url/: canonicalize.py
tests/: conftest.py
tests/pytest_plugins/: factory_boy.py
tests/unit/checkmatelib/: _response_test.py  client_test.py
tests/unit/checkmatelib/url/: canonicalise_test.py
