# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = h-checkmatelib
version = 1.0
description = Tools for interacting with the Checkmate URL checking service
long_description = file: README.md
long_description_content_type = text/markdown

author = Hypothesis Engineering Team
author_email = eng@list.hypothes.is
maintainer = Hypothesis Engineering Team
maintainer_email = eng@list.hypothes.is
url = https://web.hypothes.is/

# From: https://pypi.org/pypi?:action=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 2.7

project_urls=
    Source=https://github.com/hypothesis/checkmatelib
license=License :: OSI Approved :: BSD License
platforms=Operating System :: OS Independent

[options]
install_requires =
    future
    requests
    jsonschema
    # Pin this to the last version that works for Python 2.7
    # https://github.com/tobgu/pyrsistent/blob/master/CHANGES.txt
    pyrsistent<=0.16.1; python_version < '3.0'
    mock; python_version < '3.0'
tests_require=
    pytest
    coverage


[bdist_wheel]
# Mark this package as working on Python 2 or 3
universal=1